Added csrf protection. Modules added: csurf, body-parser, cookie-parser.

--- a/public/assets/css/navbar.css
+++ b/public/assets/css/navbar.css
@@ -1,6 +1,9 @@
 .img {
     width: 18px;
   }
+  .dropdown-toggle{
+      margin-right: 50px;
+  }
   .username {
     font-size: 13px;
     padding-left: 1em;
