--- a/views/home/login.hbs
+++ b/views/home/login.hbs
@@ -1,10 +1,8 @@
-
-{{!-- <style>
-  @import "/assets/css/login.css";
-</style> --}}
 <link rel="stylesheet" href="/assets/css/login.css">
+
 <div class="text-center lol">
   <form class="form-signin" action="/login" method="POST">
+    <input type="hidden" name="_csrf" value="{{csrfToken}}">
     <img class="mb-4" src="https://getbootstrap.com/docs/4.4/assets/brand/bootstrap-solid.svg" alt="boostrap logo" width="72" height="72">
     <h1 class="h3 mb-3 font-weight-normal">Please sign in</h1>
     <label for="inputEmail" class="sr-only">Email address</label>
