--- a/views/profile/profile.hbs
+++ b/views/profile/profile.hbs
@@ -1,10 +1,11 @@
 <link rel="stylesheet" href="/assets/css/profile.css">
+
 <div class="container">
   <div class="row">
     <div class="col-8">
       <div class="player">
         <p class="videoText show">No stream being sent at the moment</p>
-        <img src="http://linnaeus.asuscomm.com:8081/stream.mjpg" class="hide">
+        <img src="" class="hide">
       </div>
       <button type="button" class="btn btn-primary streamBtn">Request Video Stream</button>
       <div class="container events">
