--- a/views/home/register.hbs
+++ b/views/home/register.hbs
@@ -2,6 +2,7 @@
 
 <div class="signup-form">
     <form action="/register" method="post">
+		<input type="hidden" name="_csrf" value="{{csrfToken}}">
 		<h2>Sign Up</h2>
 		<p>Please fill in this form to create an account!</p>
 		<hr>
