--- a/views/partials/navBar.hbs
+++ b/views/partials/navBar.hbs
@@ -1,6 +1,3 @@
-{{!-- <style>
-  @import "/assets/css/navbar.css";
-</style> --}}
 <link rel="stylesheet" href="/assets/css/navbar.css">
 
 <nav class="navbar navbar-expand-md navbar-dark bg-dark">
@@ -12,9 +9,9 @@
               <div class="dropdown-toggle"><img src="" class="img"><p class="username">{{navBar.username}}</p></div>
             </a>
             <div class="dropdown-menu" aria-labelledby="dropdown01">
-              <a class="dropdown-item" href="#">Lol 1</a>
-              <a class="dropdown-item" href="#">Lol 2</a>
-              <a class="dropdown-item" href="#">Lol 3</a>
+              <a class="dropdown-item" href="#">LoRa-device-1</a>
+              <a class="dropdown-item disabled" href="#">LoRa-device-2</a>
+              <a class="dropdown-item disabled" href="#">LoRa-device-3</a>
               <div class="dropdown-divider"></div>
               <form method="POST" action="/logout"><div class="margin">
                 <button type="submit" class="btn btn-danger margin btn-sm">Log Out</button>
